Chore: Fixing logo visibility

--- a/src/styles/NavBarStyles.css
+++ b/src/styles/NavBarStyles.css
@@ -98,7 +98,7 @@
 }
   
 .deGooseLogo {
-    z-index: 10;
+    z-index: 999;
     margin-top: 15px;
     margin-bottom: 15px;
     width: 200px;
@@ -118,27 +118,23 @@
 
     .menu__display ul {
         background-color: black;
-        padding-top: 80px;
+        padding-top: 100px;
         overflow: hidden;
         padding-bottom: 30px;
         width: 100%;
+        height: 100vh;
         margin-right: 0px;
         right: 0px;
-        top: -10px;
+        top: -20px;
         position: absolute;
         text-align: center;
         display: block;
     }
 
     .menu__nodisplay ul {
-        background-color: black;
-        padding-top: 80px;
         overflow: hidden;
-        padding-bottom: 30px;
-        width: 100%;
         margin-right: 0px;
         right: -180vw;
-        top: -10px;
         position: absolute;
         transition: all 0.5s ease;
         text-align: center;
@@ -150,7 +146,7 @@
         font-weight: 300;
         text-align: left;
         margin-top: 20px;
-        margin-left: 35px;
+        margin-left: 45px;
         transition: all 0.5s ease;
         right: 0px;
     }
